# boilerplate

./: .gitignore  .pre-commit-config.yaml  Makefile  README.md  cvxboilerplate-0.0.1-py3-none-any.whl  cvxcooker-0.0.2-py3-none-any.whl  cvxcooker-0.0.3-py3-none-any.whl  cvxcooker-0.0.4-py3-none-any.whl  parse.py  pyproject.toml  taskfile.yml
.github/workflows/: basic.yml  release.yml
book/: _config.yml  _configTemplate.yml  parse.py
contributions/: CodeOfConduct.md  Contributing.md  ContributingTemplate.md  parse.py
cvx/: cook.py
cvx/boilerplate/: parse.py
cvx/cooker/: parse.py
cvx/templates/book/: _config.yml
cvx/templates/book/docs/: api.md  reports.md
cvx/templates/book/sphinx/: conf.py  confTemplate.py
cvx/templates/contributions/: CONTRIBUTING.md  CodeOfConductTemplate.md  ContributingTemplate.md
cvx/templates/readme/: README.md
readme/: readmeTemplate.md
tests/: test_parsing.py
tests/resources/: data.toml  pyproject.toml
tests/resources/docs/: test.md
