[tool.poetry]
name = "cvxboilerplate"
version = "0.0.0"
description = "..."
authors = ["Thomas Schmelzer"]
readme = "README.md"
repository = "https://github.com/cvxgrp/boilerplate"
packages = [{include = "cvx"}]

[tool.poetry.dependencies]
python = ">=3.9.0,<3.12"
jinja2= "*"
toml = "*"

[build-system]
requires = ["poetry>=1.6.0"]
build-backend = "poetry.masonry.api"
