[project]
name = "cvxcooker"
version = "0.0.0"
description = "..."
authors = [{name = "Thomas Schmelzer", email = "thomas.schmelzer@gmail.com"}]
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "fire>=0.7.0",
    "jinja2>=3.1.5",
    "loguru>=0.7.3",
    "toml>=0.10.2",
]

[project.urls]
repository = "https://github.com/cvxgrp/boilerplate"
homepage = "https://www.cvxgrp.com/boilerplate"

[dependency-groups]
dev = [
    "pytest-cov>=6.0.0",
    "pytest>=8.3.3",
    "pre-commit>=4.0.1",
]

[project.scripts]
cook = "cvx.cook:main"


[tool.ruff]
line-length = 120
target-version = "py310"
exclude = [
    "*__init__.py"
]

[tool.ruff.lint]
select = ["E", "F", "I"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["cvx"]
